# arbui

./: .gitignore  README.md  TODO.md  pyproject.toml  pyrightconfig.json
lang/: en.ini  pt_BR.ini
src/: __init__.py
src/core/: console-wrp.py  restic-api.py  resticProfile.py  translations.py  util.py
src/ui/: styles.css  window.py
src/ui/components/: login_dialog.py
src/ui/pages/: login.py  welcome.py
